--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "breakpoint-sass": "^2.7.1",
     "font-awesome-sass": "^4.7.0",
     "sass-flex-mixin": "^1.0.3",
-    "imagehover.css": "*"
+    "imagehover.css": "*",
+    "wow": "wowjs#^1.1.2"
   }
 }
